# sentinel

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  CONTROLS.md  Cargo.toml  KNOWN-GAPS.md  LICENSE  README.md  RULES.md  SECURITY.md  action.yml  deny.toml  llms.txt  render.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  pages.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compose-parser/: Cargo.toml
crates/compose-parser/src/: lib.rs
crates/dockerfile-parser/: Cargo.toml
crates/dockerfile-parser/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/fact-model/: Cargo.toml
crates/fact-model/src/: lib.rs  limits.rs
crates/gha-parser/: Cargo.toml
crates/gha-parser/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/corpus/: clean.yml  combo-insecure.yml  dangerous-cap.yml  df-clean.Dockerfile  df-combo.Dockerfile  df-curl-pipe.Dockerfile  df-root.Dockerfile  df-unpinned.Dockerfile  generic-port.yml  host-network.yml  k8s-endpoints-selectorless.yml  longsyntax-port.yml  privileged.yml  runs-as-root.yml  secret-file-ref.yml  secret-inline.yml  secrets-comment-placeholders.env  sensitive-port.yml  socket-mount-run.yml  socket-mount.yml  tf-inline-ipv6.tf  unpinned-image.yml  weak-cred.yml  writable-rootfs.yml
crates/harness/corpus-holdout/: p12-clean-localtime.yml  p13-clean-k8s-hardened.yml  p14-clean-tf-private.tf  p15-clean-secrets-refs.env  p16-clean-df-hardened.Dockerfile  p17-clean-gha-safe.yml  p18-clean-compose-relmount.yml  r01-run-docker-sock.yml  r02-tf-ipv6-open-sg.tf  r03-tf-standalone-ingress.tf  r04-k8s-ingress-privileged.yml  r08-df-wget-bash.Dockerfile  r09-weak-cred-postgres.yml  r10-gha-issue-injection.yml  r11-k8s-hostpath-sock.yml
crates/harness/src/: main.rs
crates/k8s-parser/: Cargo.toml
crates/k8s-parser/src/: lib.rs
crates/pack-dockerfile-core/: Cargo.toml
crates/pack-dockerfile-core/src/: lib.rs
crates/pack-gha-core/: Cargo.toml
crates/pack-gha-core/src/: lib.rs
crates/pack-k8s-core/: Cargo.toml
crates/pack-k8s-core/src/: lib.rs
crates/pack-secrets-core/: Cargo.toml
crates/pack-secrets-core/src/: lib.rs
crates/pack-sentinel-core/: Cargo.toml
crates/pack-sentinel-core/src/: lib.rs
crates/pack-terraform-core/: Cargo.toml
crates/pack-terraform-core/src/: lib.rs
crates/secrets-parser/: Cargo.toml
crates/secrets-parser/src/: lib.rs
crates/terraform-parser/: Cargo.toml
crates/terraform-parser/src/: hcl.rs  lib.rs
crates/web/: Cargo.toml
crates/web/site/: app.js  index.html  style.css
crates/web/src/: lib.rs
crates/yaml-loc/: Cargo.toml
crates/yaml-loc/src/: lib.rs
examples/: insecure-compose.yml  insecure.Dockerfile  secure-compose.yml  secure.Dockerfile
skills/scan-iac-with-sentinel/: SKILL.md
