[workspace]
resolver = "2"
members = [
    "crates/fact-model",
    "crates/engine",
    "crates/compose-parser",
    "crates/pack-sentinel-core",
    "crates/cli",
    "crates/harness",
]

# Sentinel engine + CLI workspace (the open-source developer tool).
# The hosted web UI lives in a separate internal repo.
