[workspace]
resolver = "2"
members = [
    "crates/fact-model",
    "crates/engine",
    "crates/compose-parser",
    "crates/pack-sentinel-core",
    "crates/dockerfile-parser",
    "crates/pack-dockerfile-core",
    "crates/k8s-parser",
    "crates/pack-k8s-core",
    "crates/gha-parser",
    "crates/pack-gha-core",
    "crates/terraform-parser",
    "crates/pack-terraform-core",
    "crates/secrets-parser",
    "crates/pack-secrets-core",
    "crates/yaml-loc",
    "crates/cli",
    "crates/harness",
    "crates/web",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/anwen-labs/sentinel"

# Sentinel engine workspace.
# Architecture: docs/adr/0001-engine-architecture.md
# Fact model:   docs/adr/0002-fact-model-schema.md
# Report/digest: docs/adr/0003-report-format-and-content-addressing.md
#
# v0 skeleton is intentionally dependency-free so it builds offline and is
# verifiable now. serde + canonical-JSON + hashing land in P1 (see TRACKER.md).
