[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eval"
path = "src/main.rs"

[dependencies]
fact-model = { path = "../fact-model" }
engine = { path = "../engine" }
compose-parser = { path = "../compose-parser" }
pack-sentinel-core = { path = "../pack-sentinel-core" }
dockerfile-parser = { path = "../dockerfile-parser" }
pack-dockerfile-core = { path = "../pack-dockerfile-core" }
