[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fact-model = { path = "../fact-model" }
engine = { path = "../engine" }
compose-parser = { path = "../compose-parser" }
pack-sentinel-core = { path = "../pack-sentinel-core" }
wasm-bindgen = "0.2"
